# crc_filehash_example

./: .gitignore  CMakeLists.txt  Dockerfile  Readme.md
.github/workflows/: build_cpp.yml
src/: CMakeLists.txt  HashWorker.cpp  HashWorker.hpp  Helper.cpp  Helper.hpp  main.cpp
